--- a/SisMaper/Views/CrudPessoaFisica.xaml
+++ b/SisMaper/Views/CrudPessoaFisica.xaml
@@ -189,7 +189,7 @@
                             Margin="30,20,0,0"
                             FontSize="16"
                             mah:TextBoxHelper.Watermark="Buscar Estado"
-                            IsEditable="true"
+                            IsEditable="false"
                             MaxDropDownHeight="125"
                             mah:TextBoxHelper.WatermarkAlignment="Right"
                             mah:TextBoxHelper.AutoWatermark="True"
@@ -207,7 +207,7 @@
                             Margin="30,20,0,0"
                             FontSize="16"
                             mah:TextBoxHelper.Watermark="Buscar Cidade"
-                            IsEditable="true"
+                            IsEditable="false"
                             MaxDropDownHeight="125"
                             mah:TextBoxHelper.WatermarkAlignment="Right"
                             mah:TextBoxHelper.AutoWatermark="True"
@@ -336,40 +336,38 @@
 
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Language="pt-br" Text="Estado" FontSize="22" Margin="20, 20, 0, 0" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                        <ComboBox ItemsSource="{Binding Categorias, Mode=OneWay}" x:Name="cat"
-                            SelectedItem="{Binding CategoriaSelecionada, Mode=TwoWay}"
+                        <ComboBox ItemsSource="{Binding Estados, Mode=OneWay}" x:Name="cat"
+                            SelectedItem="{Binding EstadoSelecionado, Mode=TwoWay}"
                             Grid.Row="0" BorderThickness="2"
                             Height="32"
                             Width="220"
                             Margin="30,20,0,0"
                             FontSize="16"
                             mah:TextBoxHelper.Watermark="Buscar Estado"
-                            IsEditable="true"
+                            IsEditable="false"
                             MaxDropDownHeight="125"
                             mah:TextBoxHelper.WatermarkAlignment="Right"
                             mah:TextBoxHelper.AutoWatermark="True"
                             VerticalAlignment="Top" 
-                            HorizontalAlignment="Left"
-                            Text="{Binding TextoCategoria}"/>
+                            HorizontalAlignment="Left"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Language="pt-br" Text="Cidade" FontSize="22" Margin="20, 20, 0, 0" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                        <ComboBox ItemsSource="{Binding Categorias, Mode=OneWay}"
-                            SelectedItem="{Binding CategoriaSelecionada, Mode=TwoWay}"
+                        <ComboBox ItemsSource="{Binding Cidades, Mode=OneWay}"
+                            SelectedItem="{Binding CidadeSelecionada, Mode=TwoWay}"
                             Grid.Row="0" BorderThickness="2"
                             Height="32"
                             Width="220"
                             Margin="30,20,0,0"
                             FontSize="16"
                             mah:TextBoxHelper.Watermark="Buscar Cidade"
-                            IsEditable="true"
+                            IsEditable="false"
                             MaxDropDownHeight="125"
                             mah:TextBoxHelper.WatermarkAlignment="Right"
                             mah:TextBoxHelper.AutoWatermark="True"
                             VerticalAlignment="Top" 
-                            HorizontalAlignment="Left"
-                            Text="{Binding TextoCategoria}"/>
+                            HorizontalAlignment="Left"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal">
