--- a/SisMaper/Views/ViewEscolherLote.xaml
+++ b/SisMaper/Views/ViewEscolherLote.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:viewModels="clr-namespace:SisMaper.ViewModel"
+    xmlns:templates="clr-namespace:SisMaper.Views.Templates"
     xmlns:local="clr-namespace:SisMaper.Views"
     mc:Ignorable="d"
     Title="Escolher Lote"
@@ -133,6 +134,8 @@
                 Text="Selecione o Lote para adicionar no pedido" />
         </TextBlock>
         <DataGrid
+            x:Name="DataGridEscolherLote"
+            templates:ColumnDataGridSave.SaveSizes="True"
             ItemsSource="{Binding Lotes}"
             SelectedItem="{Binding LoteSelecionado}"
             AutoGenerateColumns="False"
