--- a/SisMaper/Views/ViewVendas.xaml
+++ b/SisMaper/Views/ViewVendas.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl
+﻿<templates:MyUserControl
     x:Class="SisMaper.Views.ViewVendas"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:SisMaper.Views"
+    xmlns:templates="clr-namespace:SisMaper.Views.Templates"
     xmlns:iconpacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:viewModel="clr-namespace:SisMaper.ViewModel"
@@ -23,11 +24,7 @@
             <RowDefinition
                 Height="110" />
             <RowDefinition
-                Height="auto" />
-            <RowDefinition
-                Height="317*" />
-            <RowDefinition
-                Height="212*" />
+                Height="*" />
         </Grid.RowDefinitions>
         <ToolBar
             Style="{DynamicResource MainWindow.ToolBarStyle}"
@@ -172,9 +169,10 @@
             BorderBrush="#FFC4C4C4">
             <DataGrid
                 Style="{DynamicResource MahApps.Styles.DataGrid}"
+                templates:ColumnDataGridSave.SaveSizes="True"
                 HorizontalContentAlignment="Stretch"
                 ColumnWidth="*"
-                x:Name="Pedidos"
+                x:Name="DataGridPedidos"
                 ItemsSource="{Binding Pedidos}"
                 AutoGenerateColumns="False"
                 CanUserAddRows="False"
@@ -225,4 +223,4 @@
             </DataGrid>
         </Border>
     </Grid>
-</UserControl>
+</templates:MyUserControl>
