--- a/SisMaper/Views/CrudPessoaFisica.xaml
+++ b/SisMaper/Views/CrudPessoaFisica.xaml
@@ -212,7 +212,9 @@
                             mah:TextBoxHelper.WatermarkAlignment="Right"
                             mah:TextBoxHelper.AutoWatermark="True"
                             VerticalAlignment="Top" 
-                            HorizontalAlignment="Left"/>
+                            HorizontalAlignment="Left"
+                            Text="{Binding TextoCidade}"
+                            mah:TextBoxHelper.ClearTextButton="True"/>
                         </StackPanel>
 
                         <StackPanel Orientation="Horizontal">
@@ -367,7 +369,9 @@
                             mah:TextBoxHelper.WatermarkAlignment="Right"
                             mah:TextBoxHelper.AutoWatermark="True"
                             VerticalAlignment="Top" 
-                            HorizontalAlignment="Left"/>
+                            HorizontalAlignment="Left"
+                            Text="{Binding TextoCidade}"
+                            mah:TextBoxHelper.ClearTextButton="True"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal">
